styles/home.css
@import url('global/variables.css');
@import url('global/main.css');
@import url('global/post.css');

.cards-container {
	margin-top: 20px;
	overflow: hidden;
	border-radius: 15px;
	width: 90%;
	height: 100%;
	flex-direction: row;
	display: flex;
	justify-content: center;
	align-items: center;
	margin-left: auto;
	margin-right: auto;
	background-color: transparent;
}

.cards-container figure {
	position: relative;
	height: 100%;
	margin: auto;
}

.cards-container figure img {
	object-fit: cover;
	object-position: center;
	cursor: pointer;
	display: none;
	height: 400px;
	border-radius: 15px;
}

.cards-container figcaption {
	width: 0;
	height: 0;
	opacity: 0;
}

.cards-container figcaption p {
	margin-bottom: 0.1rem;
}

.feed {
	width: 90%;
	margin: auto;
	position: relative;
}

.feed a.create-post {
	line-height: 2.5;
	height: 40px;
	margin: auto;
	margin-top: 15px;
	width: 70%;
	max-width: 400px;
}

.feed a.create-post::after {
	content: '';
	position: relative;
	top: 2px;
	left: 6px;
	width: 15px;
	height: 15px;
	display: inline-block;
	background-image: url('../assets/icons/edit.svg');
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center;
}

.feed .go-to-top {
	position: fixed;
	bottom: 60px;
	right: 20px;
	width: 60px;
	height: 60px;
	line-height: 4.5;
	z-index: 100000;
}

.modal {
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	background-color: var(--opacity-color-violet-dark-black);
	display: grid;
	place-content: center;
}

@media (min-width: 850px) {
	.cards-container figure img {
		width: 150px;
	}
}

@media (min-width: 1000px) {
	.cards-container figure img {
		width: 150px;
	}

	.feed a.create-post {
		line-height: 3.5;
		height: 60px;
		width: 200px;
		position: fixed;
		z-index: 100000;
		right: 30px;
		bottom: 30px;
	}

	.feed a.go-to-top {
		display: none;
	}
}

@media (min-width: 1300px) {
	.cards-container {
		height: 70vh;
		min-height: 500px;
		max-height: 500px;
		width: 100%;
		gap: 8px;
	}

	.cards-container figure img {
		width: 180px;
		height: 500px;
	}

	.feed {
		width: 85%;
	}
}

